# prompt_tuning

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  compose.yml  inspect_program.py  main.py  pyproject.toml  zunda.py
.devcontainer/: devcontainer.json
configs/: config.yaml
docker/: Dockerfile  build.sh  entrypoint.sh  run.sh
experiments/: optimized_pipeline.json  optimized_pipeline_bootstrap.json  optimized_pipeline_copro.json
src/evaluation/: image_generator.py  metrics.py
src/modules/: pipelines.py  signatures.py
src/prompt_tuning/: __init__.py
tests/: test_hello.py  test_metrics.py  test_pipelines.py
